# hivelab

./: LICENSE  README.md
AISlurk/: .dockerignore  .gitignore  Dockerfile  README.md
AISlurk/slurk/: __init__.py  config.py
AISlurk/tests/: conftest.py
AISlurkBot/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entry_point.sh  pyproject.toml
AISlurkBot/src/slurk_setup_descil/api/: __init__.py
AISlurkBot/src/slurk_setup_descil/api/chatbot_api/: core.py
AISlurkBot/src/slurk_setup_descil/api/concierge_plus_api/: core.py
AISlurkBot/src/slurk_setup_descil/api/managerbot_api/: core.py
AISlurkBot/src/slurk_setup_descil/api/setup_service_api/: core.py
AISlurkBot/src/slurk_setup_descil/components/: __init__.py
AISlurkBot/src/slurk_setup_descil/components/chatbot/: __init__.py  core.py  gpt_bot.py  prompti.py
AISlurkBot/src/slurk_setup_descil/components/concierge_plus/: __init__.py  core.py
AISlurkBot/src/slurk_setup_descil/components/managerbot/: __init__.py  core.py
AISlurkBot/src/slurk_setup_descil/components/setup_service/: __init__.py  core.py
AISlurkBot/src/slurk_setup_descil/components/slurk_api/: __init__.py  core.py
AISlurkBot/src/slurk_setup_descil/components/utils/: __init__.py  core.py
SlurkExp/: .gitignore  README.md  SlurkExp.sln
SlurkExp/SlurkExp/: Dockerfile  Program.cs  SlurkExp.csproj  appsettings.json  libman.json
SlurkExp/SlurkExp/Controllers/: AppController.cs  ExpController.cs  SlurkController.cs
SlurkExp/SlurkExp/Data/: ApplicationDbContext.cs  DbProvider.cs  ISlurkExpRepository.cs  UserTimeZone.cs  (+2 more)
(+168 files in other folders)
